--- a/ocs_bcja.plist
+++ b/ocs_bcja.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://</string>
+					<string>https://github.com/panfanfan/test1/blob/master/ocs_bcja.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
