--- a/ocs_bcja.plist
+++ b/ocs_bcja.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/panfanfan/test1/blob/master/ocs_bcja.ipa</string>
+					<string>https://raw.githubusercontent.com/panfanfan/test1/master/ocs_bcja.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://github.com/panfanfan/test1/blob/master/58.png</string>
+					<string>https://raw.githubusercontent.com/panfanfan/test1/master/58.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://github.com/panfanfan/test1/blob/master/58.png</string>
+					<string>https://raw.githubusercontent.com/panfanfan/test1/master/58.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
