--- a/ocs_bcja.plist
+++ b/ocs_bcja.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.41.235:8095/video/image/ocs_bcja.ipa</string>
+					<string>http://172.16.52.244:8111/file/annex/download/d2f1f0f6180744988bb0261ba57911ec</string>
 				</dict>
 				<dict>
 					<key>kind</key>
